chore: fixed a bug with xray, separated blog & learning

--- a/apps/learn/src/variables.scss
+++ b/apps/learn/src/variables.scss
@@ -2,6 +2,7 @@ $spacing: 4px;
 
 $text-color: rgba(0, 0, 0, 0.75);
 $text-font-size: 1.3rem;
+// Mobile: $text-font-size: 1.2rem;
 $text-line-height: 1.5;
 $text-font-weight: 300;
 
